--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'pnpm'
 
       - name: 安装pnpm
         uses: pnpm/action-setup@v2
@@ -33,16 +32,15 @@ jobs:
       - name: 安装依赖
         run: pnpm install --frozen-lockfile
 
-      - name: 构建应用 - macOS
+      - name: 构建应用
         run: pnpm run make
 
-      - name: 上传构建产物
-        uses: actions/upload-artifact@v3
-        with:
-          name: macos-artifacts
-          path: |
-            out/make/*.dmg
-            out/make/zip/darwin/x64/*.zip
+      - name: 列出构建产物
+        run: |
+          ls -la out/make || echo "out/make目录不存在"
+          find out -name "*.dmg" || echo "未找到dmg文件"
+          find out -name "*.zip" || echo "未找到zip文件"
+        shell: bash
 
       - name: 创建Release
         id: create_release
@@ -53,8 +51,8 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            out/make/*.dmg
-            out/make/zip/darwin/x64/*.zip
+            out/**/*.dmg
+            out/**/*.zip
           body: |
             # 待办事项应用 ${{ github.ref_name }}
 
