--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,11 @@ on:
     tags:
       - 'v*'
 
+# 添加权限配置
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   release:
     runs-on: macos-latest
@@ -37,22 +42,23 @@ jobs:
 
       - name: 列出构建产物
         run: |
-          ls -la out/make || echo "out/make目录不存在"
-          find out -name "*.dmg" || echo "未找到dmg文件"
-          find out -name "*.zip" || echo "未找到zip文件"
+          ls -la out || echo "out目录不存在"
+          find . -type d -name "out" | xargs ls -la
+          find . -name "*.dmg" || echo "未找到dmg文件"
+          find . -name "*.zip" || echo "未找到zip文件"
         shell: bash
 
       - name: 创建Release
         id: create_release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref }}
           name: 待办事项应用 ${{ github.ref_name }}
           draft: false
           prerelease: false
           files: |
-            out/**/*.dmg
-            out/**/*.zip
+            ./out/**/*.dmg
+            ./out/**/*.zip
           body: |
             # 待办事项应用 ${{ github.ref_name }}
 
