--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "@electron-forge/cli": "^6.4.2",
+    "@electron-forge/maker-dmg": "^7.8.1",
     "@electron-forge/maker-zip": "^6.4.2",
     "@electron-forge/plugin-webpack": "^6.4.2",
     "@playwright/test": "^1.40.0",
