--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-electron-todo",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "轻量级桌面待办事项应用",
   "main": ".webpack/main",
   "scripts": {
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@electron-forge/cli": "^6.4.2",
     "@electron-forge/maker-dmg": "^7.8.1",
+    "@electron-forge/maker-squirrel": "^7.8.1",
     "@electron-forge/maker-zip": "^6.4.2",
     "@electron-forge/plugin-webpack": "^6.4.2",
     "@playwright/test": "^1.40.0",
