--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
 # 构建输出
 /dist
@@ -37,6 +38,7 @@ Thumbs.db
 
 # 测试覆盖率
 /coverage
+.nyc_output/
 
 # 日志
 logs
